# firstset

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  README_CN.md  build.rs  config.example.toml
.github/workflows/: ci.yml
assets/: app.manifest
assets/scripts/: check-rds-roles.ps1  network-info.ps1  stage1-kms.ps1  stage1-rdp.ps1  stage1-ssh.ps1  stage2-rds-roles.ps1  stage3-rds-licensing.ps1  stage4-users.ps1
src/: app.rs  config.rs  i18n.rs  main.rs  runner.rs  scripts.rs
