[package]
name = "firstset"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "A multilingual first-run configuration tool for Windows Server"
license = "MIT"
readme = "README.md"
keywords = ["windows-server", "rdp", "rds", "provisioning", "egui"]
categories = ["gui", "config", "os::windows-apis"]
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "wgpu", "x11"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
